# wuwa-helper

./: .gitignore  README.md  build.ps1  build_exe.ps1  start-services.ps1  start.bat  띵조AI.vbs
backend/: .env.example  .gitignore  app.spec  desktop.py  main.py  pyproject.toml  run.py  run_native.py  띵조AI.spec
backend/data/: build_rules.json  character_catalog.json  curated_updates_i18n.json  game_updates.json  pickup_schedule.json  sample_extraction.json  site_updates.json  team_rules.json
backend/native/: __init__.py  __main__.py  app.py  calc.py  engine.py  icons.py  lang.py  main.py  settings.py  theme.py  widgets.py
backend/scripts/: downscale_update_banners.py  export_catalog_to_files.py  export_content_to_files.py  extract_echoes_35.py  extract_forte_bonuses.py  extract_from_datamine.py  extract_i18n_names.py  extract_i18n_skills.py  fix_1502_duplicate_skills.py  import_seed_data.py  rebuild_wip_chains.py  refresh_skills_from_datamine.py  refresh_sonata_icons.py  run_datamine_ingest.py  run_encore_refresh.py  run_wutheringgg_refresh.py  seed_game_config.py  seed_release_030.py  seed_release_031.py  seed_release_040.py  seed_release_041.py  seed_release_042.py  seed_release_043.py  seed_release_044.py  seed_release_100.py  seed_release_101.py
backend/src/: __init__.py  ai_coach.py  ai_store.py  catalog.py  content.py  content_refresh.py  curated_updates.py  database.py  evaluator.py  export_import.py  history.py  localstore.py  media.py  models.py  optional_local_vision.py  optional_ocr.py  parser.py  report.py  rules.py  users.py  vision.py
(+167 files in other folders)
